Se renderiza el shortcode de manera correcta y ajuste de href para SEO

--- a/assets/css/relatedposts.css
+++ b/assets/css/relatedposts.css
@@ -24,6 +24,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to ed
 #ds8-related-posts a.ds8related.post-title-related {
   line-height: 16px;
   font-weight: 700;
+  margin-top: 10px;
   color: #000
 }
 
